# midt_bot

./: .gitignore  README.md  demo_cli.py  pyproject.toml
docs/superpowers/plans/: 2026-04-19-langgraph-demo.md
docs/superpowers/specs/: 2026-04-19-langgraph-demo-design.md
notebooks/: hr_assistant_walkthrough.ipynb
src/hr_assistant/: __init__.py  config.py  graph.py  guards.py  logging.py  mocks.py  nodes.py  state.py
tests/: test_checkpointer.py  test_classifier.py  test_config.py  test_graph_e2e.py  test_guards.py  test_mocks.py  test_nodes_feeds.py  test_nodes_gate.py  test_nodes_llm_memory.py  test_nodes_merge.py  test_nodes_rewriter.py  test_reducer.py  test_router.py
