[project]
name = "hr-assistant-demo"
version = "0.1.0"
description = "LangGraph learning demo based on Assitio HR Assistant flow"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2.60",
    "structlog>=24.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
